add dinamic titles end write a correct tests

--- a/app/views/cool_pages/about.html.erb
+++ b/app/views/cool_pages/about.html.erb
@@ -1,2 +1,7 @@
-<h1>CoolPages#about</h1>
-<p>Find me in app/views/cool_pages/about.html.erb</p>
+<% provide(:title, 'About us') %>
+
+<h1>About Us</h1>
+<p>
+  This is my cool product! You must tap a some like me pidr
+  <a href="https://vk.com/halla_mahun">IT's ME!</a>
+</p>
