--- a/app/views/cool_pages/help.html.erb
+++ b/app/views/cool_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>CoolPages#help</h1>
-<p>Find me in app/views/cool_pages/help.html.erb</p>
+<% provide(:title,'Help')%>
+
+<h1>Pomogu</h1>
+<p>
+  This is my cool product! You must tap a some like me pidr
+  <a href="https://vk.com/halla_mahun">IT's ME!</a>
+</p>
