--- a/app/views/cool_pages/home.html.erb
+++ b/app/views/cool_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>CoolPages#home</h1>
-<p>Find me in app/views/cool_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+<h1> Cool Page</h1>
+<p>
+  This is my cool product! You must tap a some like me pidr
+  <a href="https://vk.com/halla_mahun">IT's ME!</a>
+</p>
+
